apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__default_config_has_defaults.snap
---
source: apollo-router/src/configuration/tests.rs
expression: "Configuration::default().validated_yaml"
---
plugins: ~
telemetry:
  apollo:
    endpoint: "https://usage-reporting.api.apollographql.com/api/ingress/traces"
supergraph:
  listen: "127.0.0.1:4000"

