apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__ensure_configuration_api_does_not_change-2.snap
---
source: apollo-router/src/configuration/mod.rs
assertion_line: 656
expression: config

---
server:
  listen: "1.2.3.4:5"
  cors:
    allow_any_origin: ~
    allow_credentials: ~
    allow_headers:
      - Content-Type
    expose_headers: ~
    origins:
      - foo
      - bar
      - baz
    methods:
      - foo
      - bar
subgraphs:
  example:
    routing_url: "http://foo/"
    layers: []
plugins: {}

