apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__ensure_configuration_api_does_not_change_grpc.snap
---
source: apollo-router/src/configuration/mod.rs
expression: config

---
server:
  listen: "1.2.3.4:5"
  cors: ~
subgraphs:
  example:
    routing_url: "http://foo/"
opentelemetry:
  otlp:
    tracing:
      exporter:
        grpc: ~
      trace_config: ~

