apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__ensure_configuration_api_does_not_change_tls_config.snap
---
source: apollo-router/src/configuration/mod.rs
assertion_line: 482
expression: config

---
server:
  listen: "1.2.3.4:5"
  cors: ~
subgraphs:
  example:
    routing_url: "http://foo/"
    extensions: []
opentelemetry:
  otlp:
    tracing:
      exporter:
        grpc:
          endpoint: ~
          metadata: ~
          protocol: ~
          timeout: ~
          tls_config:
            domain_name: ~
            ca:
              env: SECRET_STUFF
            cert:
              file: /foo
            key:
              file: /bar
      trace_config: ~
plugins: {}

