apollo-router/src/configuration/snapshots/apollo_router__configuration__tests__expansion_failure_missing_variable.snap
---
source: apollo-router/src/configuration/tests.rs
expression: error.to_string()
---
apollo::configuration::expansion

  × could not expand configuration values
  ╰─▶ could not expand configuration values

Error: apollo::configuration::expansion_missing

  × expansion value not present
   ╭─[3:18]
 2 │ supergraph:
 3 │   introspection: ${env.TEST_CONFIG_UNKNOWN_WITH_NO_DEFAULT}
   ·                  ─────────────────────┬────────────────────
   ·                                       ╰── expansion value not present
 4 │         
   ╰────
